<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_primary"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="192dp"
            app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/iv_detail_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_about_name"
            style="@style/TextContent.HeadlineMedium.Bold"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/name_character" />

        <TextView
            android:id="@+id/tv_about_email"
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/fun_fact"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_about_city"
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_fun_fact" />

    </LinearLayout>
</ScrollView>
